@@ -16,6 +16,8 @@ ALL CHANGES:
   TEZ-1774. AppLaunched event for Timeline does not have start time set.
   TEZ-1780. tez-api is missing jersey dependencies.
   TEZ-1796. Use of DeprecationDelta broke build against 2.2 Hadoop.
+  TEZ-1818. Problem loading tez-api-version-info.properties in case current context classloader
+    in not pointing to Tez jars.
 
 Release 0.5.2: 2014-11-07
 
